...

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/finish_journey_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#015b66"
            android:padding="10dp"
            android:text="@string/finish_my_journey"
            android:textColor="@android:color/background_light"
            android:textSize="30sp"
            android:visibility="gone"
            android:onClick="stopTimer"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/start_journey_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#015b66"
            android:padding="10dp"
            android:text="@string/start_the_journey"
...
