<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JourneySummary">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/journey_summary_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textSize="35sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/close_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/close"
            android:background="#FF0000"
            android:textSize="30sp"
            android:textColor="@color/common_google_signin_btn_text_dark_pressed"
            android:textColorHighlight="@color/common_google_signin_btn_text_dark_focused"
            />

    </RelativeLayout>
</FrameLayout>