<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreen"
    android:id="@+id/login_fragment"
    android:gravity="center"
    android:orientation="vertical"
    >

    <TextView
        android:gravity="center"
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ceco Bike Admin"
        android:textSize="35dp"
        />
    <EditText
        android:id = "@+id/editText1"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:hint="Enter Username"

        />
    <EditText
        android:hint="Password"
        android:id = "@+id/editText2"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:inputType = "textPassword"
        />

    <Button
        android:id = "@+id/button1"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:onClick = "login"
        android:text = "Login"
        />

    <ImageView
        android:id = "@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"/>



</LinearLayout>